# hwpx-genai-template-agent

./: .env.example  .gitignore  README.md  config.py  main.py  merge_project.py  models.py  pyproject.toml  requirements.txt
core/: hwpx_processor.py  llm_agent.py  vector_store.py
hwpx_genai_template_agent/: __init__.py  cli.py  models.py
hwpx_genai_template_agent/core/: __init__.py  hwpx_processor.py  llm_agent.py  vector_store.py
test/: hwpx_complete_poc.py
tests/: test_public_api.py
